Trying to use a VM as the web_app host.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -12,5 +12,6 @@ ssh_args='-o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=60s -o Pre
 # strategy=mitogen_linear
 
 [ssh_connection]
+ansible_connection=ssh
 control_path = /tmp/ansible-ssh-%%h-%%p-%%r
 pipelining=true # https://www.jeffgeerling.com/blog/2017/slow-ansible-playbook-check-ansiblecfg
