--- a/ansible/web_app.yml
+++ b/ansible/web_app.yml
@@ -231,5 +231,5 @@
       shell: |
         cd ~/{{ APP_NAME }}
         rake db:migrate
-        pkill puma
+        pkill -e -f puma
         bundle exec puma --bind tcp://0.0.0.0:9293 --daemon
