Revert "Adding jQuery form validation plugin."
This reverts commit 60213cab92bf8feaa0966187b3da70850c2122a4.

--- a/ansible/web_app.yml
+++ b/ansible/web_app.yml
@@ -231,5 +231,5 @@
       shell: |
         cd ~/{{ APP_NAME }}
         rake db:migrate
-        pkill -e -f puma
+        pkill puma
         bundle exec puma --bind tcp://0.0.0.0:9293 --daemon
