FIXED Change Video link target.

--- a/ansible/web_app.yml
+++ b/ansible/web_app.yml
@@ -168,7 +168,7 @@
 
     - name: Update RDS DNS address
       command: >
-        sed -i "s/DB_HOST="mariadb"/DB_HOST="{{ database_address }}"/g" /home/{{ local_user }}/{{ APP_NAME }}/.env
+        sed -i "s/DB_HOST=\"mariadb\"/DB_HOST=\"{{ database_address }}\"/g" /home/{{ local_user }}/{{ APP_NAME }}/.env
 
     # Configure fusermount to enable "allow_other" s3fs mounting
     # TODO: Consider using the replace, lineinfile or template module rather than running sed.
