--- a/ansible/web_app.yml
+++ b/ansible/web_app.yml
@@ -189,12 +189,11 @@
     - name: Install Ruby Bundler and gems
       shell: |
         cd /home/{{ local_user }}/{{ APP_NAME }}
-        gem install bundler -v 1.3.5
+        gem install bundler -v 2.0.1
         # source https://bundler.io/man/bundle-binstubs.1.html
         bundle --binstubs
-        bundle install
-        # source https://philna.sh/blog/2017/06/12/speed-up-bundle-install-with-this-one-trick/
-        # after v 1.4.0: --jobs=5
+        bundle config --global jobs 4
+        bundle install -V
 
     - name: Change ownership of web app dir
       file:
