REPLACES TF string literals for variables. UPDATED .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ bower.json
 **/*.rar
 **.*gz
 .passwd*
+**/*id_rsa*
 
 # Vendor provided libraries for TF controlled Lambdas
 /terraform/**/pymysql/
