UPDATED terraform configuration to 0.12.x

--- a/.env.dist
+++ b/.env.dist
@@ -5,6 +5,9 @@ APP_ENV="STRING"
 # alphanumeric, lowercase
 APP_NAME="STRING"
 
+# Semver version of application
+APP_VER="X.Y.Z"
+
 # Google services credentials
 GOOGLEANALYTICS="UA-STRING-1"
 
