ADDED or UPDATED a number of smaller items for release 1.1.5

--- a/.env.dist
+++ b/.env.dist
@@ -4,9 +4,8 @@
 APP_ENV="STRING" 
 # alphanumeric, lowercase
 APP_NAME="STRING"
-
 # Semver version of application
-APP_VER="X.Y.Z"
+APP_VER="INTEGER.INTEGER.INTEGER"
 
 # Google services credentials
 GOOGLEANALYTICS="UA-STRING-1"
