ENABLED DB secrets logic. ADDED ssm_client logic to Devise.

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -13,17 +13,17 @@
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 
-# development:
-#   secret_key_base: <%= ENV["COOKIE_SECRET_KEY_BASE"] %>
-#   stripe_secret_key: <%= ENV["STRIPE_SK"] %>
-#   stripe_publishable_key: <%= ENV["STRIPE_PK"] %>
+development:
+  secret_key_base: <%= ENV["COOKIE_SECRET_KEY_BASE"] %>
+  stripe_secret_key: <%= ENV["STRIPE_SK"] %>
+  stripe_publishable_key: <%= ENV["STRIPE_PK"] %>
 
-# test:
-#   secret_key_base: <%= ENV["COOKIE_SECRET_KEY_BASE"] %>
-#   stripe_secret_key: <%= ENV["STRIPE_SK"] %>
-#   stripe_publishable_key: <%= ENV["STRIPE_PK"] %>
+test:
+  secret_key_base: <%= ENV["COOKIE_SECRET_KEY_BASE"] %>
+  stripe_secret_key: <%= ENV["STRIPE_SK"] %>
+  stripe_publishable_key: <%= ENV["STRIPE_PK"] %>
 
-# production:
-#   secret_key_base: <%= ENV["COOKIE_SECRET_KEY_BASE"] %>
-#   stripe_secret_key: <%= ENV["STRIPE_SK"] %>
-#   stripe_publishable_key: <%= ENV["STRIPE_PK"] %>
+production:
+  secret_key_base: <%= ENV["COOKIE_SECRET_KEY_BASE"] %>
+  stripe_secret_key: <%= ENV["STRIPE_SK"] %>
+  stripe_publishable_key: <%= ENV["STRIPE_PK"] %>
