UPDATED all ENV variable names to better align to new nominclature.

--- a/.env.dist
+++ b/.env.dist
@@ -3,7 +3,7 @@
 # alphanumeric, lowercase
 APP_ENV="STRING" 
 # alphanumeric, lowercase
-APP_NAME="STRING"
+STAGE="STRING"
 # Semver version of application
 APP_VER="INTEGER.INTEGER.INTEGER"
 
@@ -11,13 +11,13 @@ APP_VER="INTEGER.INTEGER.INTEGER"
 GOOGLEANALYTICS="UA-STRING-1"
 
 # Database connection
-DB_HOST="STRING"
-DB_PORT="INTEGER"
-DB_USER="STRING"
-DB_PASS="STRING"
+RDS_DB_HOST="STRING"
+RDS_DB_PORT="INTEGER"
+RDS_DB_USER="STRING"
+RDS_DB_PASS="STRING"
 
-DB_TST_SCHE="STRING"
-DB_SCHE="STRING"
+RDS_DB_TST_SCHE="STRING"
+RDS_DB_SCHE="STRING"
 
 # cookie secret key
 COOKIE_SECRET_KEY_BASE="STRING"
@@ -33,11 +33,11 @@ AWS_S3_MEDIA_DISPLAY_BUCKET="STRING"
 AWS_S3_MEDIA_SOURCE_BUCKET="STRING"
 
 # Action mailer credentials
-SES_SMTP_ADDRESS="FQDN"
-SES_SMTP_PORT="INTEGER"
-SES_SMTP_USERNAME="STRING"
-SES_SMTP_PASSWORD="STRING"
-SES_SMTP_SENDER="EMAIL"
+SES_SES_SMTP_ADDRESS="FQDN"
+SES_SES_SMTP_PORT="INTEGER"
+SES_SES_SMTP_USERNAME="STRING"
+SES_SES_SMTP_PASSWORD="STRING"
+SES_SES_SMTP_SENDER="EMAIL"
 
 # Stripe
 STRIPE_PUBLISHABLE_KEY="STRING"
