--- a/config/database.yml
+++ b/config/database.yml
@@ -11,13 +11,13 @@ default: &default
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: <%= ENV['RDS_DB_TST_SCHE'] %>
+# test:
+#   <<: *default
+#   database: <%= ENV['RDS_DB_TST_SCHE'] %>
 
-development:
-  <<: *default
-  database: <%= ENV['RDS_DB_SCHE'] %>
+# development:
+#   <<: *default
+#   database: <%= ENV['RDS_DB_SCHE'] %>
 
 production:
   <<: *default
