--- a/ansible/logrotate.conf
+++ b/ansible/logrotate.conf
@@ -1,10 +1,8 @@
-/home/ubuntu/connechub/logs/*.log{
+/home/ubuntu/connechub/log/*.log{
     daily
     missingok
-    rotate 24
+    rotate 7
     compress
     delaycompress
-    notifempty
-    create 0640 www-data adm
-    sharedscripts
+    create 0640 ubuntu ubuntu
 }
