ADDED config for 'test' Rails app default ENV. ITERATED on Ruby GeoCoder configuration.

--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,10 @@ development:
   <<: *default
   database: <%= ENV['RDS_DB_SCHE'] %>
 
+test:
+  <<: *default
+  database: <%= ENV['RDS_DB_SCHE'] %>
+
 production:
   <<: *default
   database: <%= ENV['RDS_DB_SCHE'] %>
