--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -18,6 +18,11 @@ development:
   stripe_secret_key: <%= ENV["STRIPE_SK"] %>
   stripe_publishable_key: <%= ENV["STRIPE_PK"] %>
 
+test:
+  secret_key_base: <%= ENV["COOKIE_SECRET_KEY_BASE"] %>
+  stripe_secret_key: <%= ENV["STRIPE_SK"] %>
+  stripe_publishable_key: <%= ENV["STRIPE_PK"] %>
+
 production:
   secret_key_base: <%= ENV["COOKIE_SECRET_KEY_BASE"] %>
   stripe_secret_key: <%= ENV["STRIPE_SK"] %>
