Does this even work?

--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,7 @@
 # encapsulate values in double quotes
 
 # alphanumeric, lowercase
-APP_ENV="STRING" 
+APP_ENV="STRING"
 # alphanumeric, lowercase
 STAGE="STRING"
 # Semver version of application
@@ -33,11 +33,11 @@ AWS_S3_MEDIA_DISPLAY_BUCKET="STRING"
 AWS_S3_MEDIA_SOURCE_BUCKET="STRING"
 
 # Action mailer credentials
-SES_SES_SMTP_ADDRESS="FQDN"
-SES_SES_SMTP_PORT="INTEGER"
-SES_SES_SMTP_USERNAME="STRING"
-SES_SES_SMTP_PASSWORD="STRING"
-SES_SES_SMTP_SENDER="EMAIL"
+SES_SMTP_ADDRESS="FQDN"
+SES_SMTP_PORT="INTEGER"
+SES_SMTP_USERNAME="STRING"
+SES_SMTP_PASSWORD="STRING"
+SES_SMTP_SENDER="EMAIL"
 
 # Stripe
 STRIPE_PUBLISHABLE_KEY="STRING"
