--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 /**/tmp
 /vendor
 /node_modules
+/cypress/screenshots
+
 # files to ignore
 *.log
 
@@ -19,7 +21,6 @@ rerun.txt
 .rvmrc
 *.bowerrc
 bower.json
-
 
 # Ignore bundler config.
 /.bundle
