--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "cypress": "^4.6.0"
+    "cypress": "^4.6.0",
+    "cypress-image-snapshot": "^3.1.1"
   },
   "scripts": {
     "test": "test"
