--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "directories": {
     "doc": "docs"
   },
-  "dependencies": {},
+  "dependencies": {
+    "npm": "^6.14.5"
+  },
   "devDependencies": {
     "cypress": "^4.9.0",
     "cypress-image-snapshot": "^3.1.1"
