REMOVED ./cypress/snapshots. UPDATED .gitignore. UPDATED UAT tests.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /vendor
 /node_modules
 /cypress/screenshots
+/cypress/snapshots
 
 # files to ignore
 *.log
@@ -35,3 +36,4 @@ bower.json
 **.*gz
 .passwd*
 **/*id_rsa*
+
