--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,18 @@
 .tmp/
 
 # dirs to ignore
-/public/system
 /**/tmp
-/vendor
-/node_modules
 /cypress/screenshots
 /cypress/snapshots
+/log
+/node_modules
+/public/assets
+/public/system
+/vendor
 
 # files to ignore
 *.log
+*.log.*
 *.tmp
 
 # Test and misc files
